# openevent-modules-im

./: Makefile  README.md  README_cn.md  build.sh  p2p_config.yaml  pyproject.toml  test-e2e.sh  test.sh
docs/: IM-P2P-SYNCER.md  IM-P2P-SYNCER_cn.md  IM-PROTOCOL-SDK.md  IM-PROTOCOL-SDK_cn.md  IM_PROTOCOL.md  IM_PROTOCOL_cn.md
src/openevent/im_p2p_syncer/: __init__.py  adapter_registry.py  cli.py  config.py  ids.py  loop.py  mapping.py  models.py  state.py  syncer.py
src/openevent/im_p2p_syncer/adapters/: __init__.py  base.py  lark_openapi.py
src/openevent/im_sdk/: __init__.py  client.py  codec.py  errors.py  model.py  normalizer.py  timeout.py
tests/: test_e2e.py  test_im_sdk.py  test_p2p_config.py
